<resources>
    <string name="app_name">My Runs</string>
    <string name="action_settings">Settings</string>

    <string name="lbl_profile_photo">Profile Photo:</string>
    <string name="profile_photo_preview">Profile Photo Preview</string>

    <string name="btn_change">Change</string>

    <string name="lbl_name">Name</string>
    <string name="lbl_email">Email</string>
    <string name="lbl_phone">Phone</string>
    <string name="lbl_female">Female</string>
    <string name="lbl_male">Male</string>
    <string name="lbl_class">Class</string>
    <string name="lbl_major">Major</string>
    <string name="lbl_save">Save</string>
    <string name="lbl_cancel">Cancel</string>
    <string name="lbl_gender">Gender</string>

    <string name="tab_start">Start</string>
    <string name="tab_history">History</string>
    <string name="tab_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="account_preferences_header">Account Preferences</string>
    <string name="additional_settings_header">Additional Settings</string>
    <string name="misc_header">Misc.</string>

    <!-- Account Preferences -->
    <string name="user_profile_title">Name, Email, Class, etc</string>
    <string name="user_profile_summary">User Profile</string>
    <string name="privacy_settings_title">Privacy Settings</string>
    <string name="privacy_settings_summary">Posting your records anonymously</string>

    <!-- Additional Settings -->
    <string name="unit_preference_title">Unit Preference</string>
    <string name="unit_preference_summary">Select the units</string>
    <string name="comments_title">Comments</string>
    <string name="comments_summary">Please enter your comments</string>

    <!-- Misc. -->
    <string name="webpage_title">Webpage</string>
    <string name="webpage_summary">https://www.sfu.ca/computing.html</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="input_type_title">Input Type</string>
    <string name="activity_type_title">Activity Type</string>
    <string name="start_button_text">Start</string>
    <string name="date_lbl">Date</string>
    <string name="time_lbl">Time</string>
    <string name="duration_lbl">Duration</string>
    <string name="distance_lbl">Distance</string>
    <string name="calories_lbl">Calories</string>
    <string name="heart_rate_lbl">Heart Rate</string>
    <string name="comment_lbl">Comment</string>
    <string name="save_lbl">Save</string>
</resources>