<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:layout_scrollEffect="none">

        <TextView
            android:id="@+id/tvProfilePhoto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="8dp"
            android:paddingTop="4dp"
            android:text="@string/lbl_profile_photo" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="400dp">

            <ImageView
                android:id="@+id/ivProfilePhoto"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:contentDescription="@string/profile_photo_preview"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/btnChange"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/avatars" />

            <Button
                android:id="@+id/btnChange"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:onClick="onChangeClicked"
                android:text="@string/btn_change"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tvName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@id/etName"
            android:paddingHorizontal="8dp"
            android:paddingTop="4dp"
            android:text="@string/lbl_name" />

        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="name"
            android:ems="10"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@id/etEmail"
            android:paddingHorizontal="8dp"
            android:paddingTop="4dp"
            android:text="@string/lbl_email" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="phone"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <TextView
            android:id="@+id/tvPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@id/etPhone"
            android:paddingHorizontal="8dp"
            android:paddingTop="4dp"
            android:text="@string/lbl_phone" />

        <EditText
            android:id="@+id/etPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="phone"
            android:ems="10"
            android:inputType="phone"
            android:minHeight="48dp"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <TextView
            android:id="@+id/tvGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="8dp"
            android:paddingTop="4dp"
            android:text="@string/lbl_gender" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/rgGender">

            <RadioButton
                android:id="@+id/rbFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="16dp"
                android:text="@string/lbl_female" />

            <RadioButton
                android:id="@+id/rbMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="16dp"
                android:text="@string/lbl_male" />

        </RadioGroup>

        <TextView
            android:id="@+id/tvClass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@id/etClass"
            android:paddingHorizontal="8dp"
            android:paddingTop="4dp"
            android:text="@string/lbl_class" />

        <EditText
            android:id="@+id/etClass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="number"
            android:minHeight="48dp"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <TextView
            android:id="@+id/tvMajor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@id/etMajor"
            android:paddingHorizontal="8dp"
            android:paddingTop="4dp"
            android:text="@string/lbl_major" />

        <EditText
            android:id="@+id/etMajor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="text"
            android:minHeight="48dp"
            tools:ignore="DuplicateSpeakableTextCheck,DuplicateSpeakableTextCheck" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:onClick="onSaveClicked"
                android:text="@string/lbl_save"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/btnCancel"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:onClick="onCancelClicked"
                android:text="@string/lbl_cancel"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/btnSave"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</ScrollView>
